# datasette-plugin-template-repository-demo

./: README.md  pyproject.toml  setup.py
tests/: test_plugin_template_repository_demo.py
