[project]
name = "datasette-plugin-template-repository-demo"
version = "0.1"
description = "Demo of datasette-plugin-template-repository"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = {text = "Apache-2.0"}
classifiers=[
    "Framework :: Datasette",
    "License :: OSI Approved :: Apache Software License"
]
requires-python = ">=3.8"
dependencies = [
    "datasette"
]

[project.urls]
Homepage = "https://github.com/simonw/datasette-plugin-template-repository-demo"
Changelog = "https://github.com/simonw/datasette-plugin-template-repository-demo/releases"
Issues = "https://github.com/simonw/datasette-plugin-template-repository-demo/issues"
CI = "https://github.com/simonw/datasette-plugin-template-repository-demo/actions"

[project.entry-points.datasette]
plugin_template_repository_demo = "datasette_plugin_template_repository_demo"

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
